Sun Oct  5 11:14:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/rubyunit.rb: aliasing TestCase into the top level is
          problematic.

	* lib/runit/assert.rb: fixed a couple of bugs caused by recent
	  refactoring in Test::Unit.

	* test/testunit/runit/*: added.

Sun Oct  5 10:55:29 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/open-uri.rb (URI::Generic#find_proxy): no_proxy support did not
	  work.  [ruby-dev:21484]

Sun Oct  5 09:52:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: will use pp for output if available.
	  Can be disabled by setting Assertions.use_pp = false.

	* test/testunit/test_assertions.rb: made a small change to exception
	  formatting.

Sun Oct  5 07:42:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: made small improvements to assertion
	  messages. Deprecated Assertions#assert_not_nil; use #assert instead.

	* test/testunit/test_assertions.rb: ditto.

	* test/testunit/util/test_procwrapper.rb: use #assert instead of
	  #assert_not_nil.

Sun Oct  5 04:10:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: refactored message building.

Sun Oct  5 03:40:22 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.h: global symbols should be declared
	  as external.

Sun Oct  5 03:03:20 2003  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_exception.rb (test_else): added.

Sun Oct  5 02:12:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: changed assertion messages to rely more
	  heavily on #inspect. Added backtrace filtering for exceptions in
	  assertion messages.

	* test/testunit/test_assertions.rb: ditto.

Sun Oct  5 02:12:00 2003  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/acl.rb, lib/drb/ssl.rb: added.

	* lib/drb/drb.rb: exit from a thread using 'break'.

Sat Oct  4 21:49:14 2003  WATANABE Hirofumi  <eban@ruby-lang.org>
