@@ -1,3 +1,8 @@
+Sun Oct  5 11:23:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>
+
+	* test/testunit/runit/test_testresult.rb: removed some unnecessary
+	  cruft.
+
 Sun Oct  5 11:14:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>
 
 	* lib/rubyunit.rb: aliasing TestCase into the top level is
